anthos/namespaces/jupyter/hub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    configmanagement.gke.io/cluster-selector: jupyterhub
  labels:
    app: jupyterhub
    component: hub
    name: hub
    release: srcc-jupyter
  name: hub
  namespace: jupyter
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jupyterhub
      component: hub
      name: hub
      release: srcc-jupyter
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        seccomp.security.alpha.kubernetes.io/pod: 'runtime/default'      
      labels:
        app: jupyterhub
        component: hub
        name: hub
        release: srcc-jupyter
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: component
                  operator: In
                  values:
                  - proxy
                - key: release
                  operator: In
                  values:
                  - srcc-jupyter
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - command:
        - jupyterhub
        - --config
        - /srv/jupyterhub_config.py
        image: us-docker.pkg.dev/srcc-nero-prod/docker-repo/jupyterhub-20.04:production
        imagePullPolicy: Always
        name: hub-container
        ports:
        - containerPort: 8081
          name: hub
          protocol: TCP
        resources:
          requests:
            cpu: 200m
        securityContext:
          allowPrivilegeEscalation: false    
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/extrausers
          name: extra-users
          readOnly: true
        - mountPath: /srv/jupyterhub
          name: hub-db-dir
        - mountPath: /srv/jupyterhub_config.py
          name: jupyterhub-config
          subPath: jupyterhub_config.py
        - mountPath: /etc/jupyterhub/secret/
          name: secret
      dnsConfig:
        options:
        - name: ndots
          value: "1"
        - name: single-request-reopen
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      serviceAccount: hub
      serviceAccountName: hub
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: artifact-registry
      nodeSelector:
        type: admin
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      volumes:
      - configMap:
          defaultMode: 365
          name: extrausers
        name: extra-users
      - name: hub-db-dir
        persistentVolumeClaim:
          claimName: hub-db-dir-usercluster
      - configMap:
          defaultMode: 292
          name: jupyterhub-config
        name: jupyterhub-config
      - name: secret
        secret:
          defaultMode: 420
          secretName: hub-secret
