anthos/namespaces/jupyter/hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub
  namespace: jupyter
  annotations:
    configmanagement.gke.io/cluster-selector: jupyterhub
spec:
  clusterIP: 10.152.68.110
  loadBalancerIP: 10.112.1.227
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31837
    name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    component: hub
  sessionAffinity: None
  type: LoadBalancer
