anthos/namespaces/jupyter/proxy-istio-api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-api
  namespace: jupyter
  annotations:
    configmanagement.gke.io/cluster-selector: jupyterhub-istio-proxy
spec:
  clusterIP: 10.152.236.150
  ports:
    - name: http-proxy-api
      port: 8001
      protocol: TCP
      targetPort: 8000
  selector:
    component: proxy
  type: ClusterIP
