anthos/namespaces/jupyter/jupyter-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jupyterhub-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "www.onprem.carina.stanford.edu"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-www.onprem.carina.stanford.edu
    hosts:
    - "www.onprem.carina.stanford.edu"
---

#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: jupyterhub
#spec:
#  hosts:
#  - "www.onprem.carina.stanford.edu"
#  gateways:
#  - jupyterhub-gateway
#  http:
#  - match:
#    - uri:
#        prefix: /
#    - uri:
#        prefix: /*
#    route:
#    - destination:
#        port:
#          number: 8081
#        host: jupyterhub-gateway
