anthos/namespaces/jupyter/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    configmanagement.gke.io/cluster-selector: jupyterhub
  name: jupyter
  labels:
    istio.io/rev: asm-1122-0
    jupyter: req
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: jupyter
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
